Fixed an issue where the squares would appear for a small amount of time before disappearing and starting the bounce animation. Also fixed the keyboard svg being too big on small form factor devices.

--- a/src/styling/landing.scss
+++ b/src/styling/landing.scss
@@ -12,7 +12,7 @@
   grid-column: 1 / 1;
 }
 .landing__keyboard-grid {
-  display: grid;
+  display: none;
   grid-template-columns: repeat(auto-fill, minmax(15rem, 2fr));
   grid-auto-rows: 1fr;
   font-size: 2rem;
